--- a/game-started/src/style.css
+++ b/game-started/src/style.css
@@ -61,7 +61,7 @@ body {
   width: 228px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .icons {
